Improve contrast in fixture list #20

--- a/src/components/component-playground.less
+++ b/src/components/component-playground.less
@@ -25,7 +25,6 @@
 
 @fixture-line-height: 30px;
 @fixture-component-font-size: 16px;
-@fixture-component-color: rgba(173, 170, 164, 0.6);
 
 @editor-font-family: Menlo, Consolas, 'Courier New', monospace;
 @editor-font-size: 13px;
@@ -159,7 +158,7 @@
             height: @fixture-line-height;
             margin: 0;
             padding: 0 @default-spacing;
-            color: @fixture-component-color;
+            color: @left-nav-color-selected;
             font-size: @fixture-component-font-size;
             line-height: @fixture-line-height;
             white-space: nowrap;
